bpo-41025: Fix subclassing for zoneinfo.ZoneInfo (GH-20965)

Prior to this change, attempting to subclass the C implementation of
zoneinfo.ZoneInfo gave the following error:

    TypeError: unbound method ZoneInfo.__init_subclass__() needs an argument

https://bugs.python.org/issue41025